<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaPrint</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="page_title_select_foto">Фотография</string>
    <string name="page_title_edit_text">Сообщение</string>
    <string name="page_title_edit_address">Адрес</string>
    <string name="page_title_result">Отправка</string>
    <string name="menu_item_addresses">Адреса</string>
    <string name="menu_item_orders">Заказы</string>
    <string name="menu_item_main">Меню</string>
    <string name="account_info">Аккаунт</string>
    <string name="title_without_sender">Без отправителя</string>
    <string name="title_wasnt_payed">Не оплачен</string>
    <string name="address_from_no_named">Без отправителя</string>
    <string name="press_to_choose">Нажмите, чтобы выбрать</string>
    <string name="address_from">От кого</string>
    <string name="address_to">Кому</string>
    <string name="full_name">ФИО</string>
    <string name="address">Адрес</string>
    <string name="zipcode">Индекс</string>
    <string name="address_to_no_named">Без получателя</string>
    <string name="create_button">Создать</string>
    <string name="create_address_dialog_title">Добавить новый адрес</string>
    <string name="cancel_button">Отмена</string>
    <string name="create_account">Добавить</string>
    <string name="edit_address_dialog_title">Редактирование адреса</string>
    <string name="remove_address">Удаление адреса</string>
    <string name="remove_address_message">Вы действительно хотите удалить этот адрес?</string>
    <string name="save_button">Сохранить</string>
    <string name="remove_button">Удалить</string>
    <string name="purchase_not_available">Ошибка: не удается запустить систему оплаты</string>
    <string name="cannot_save_image_to_sd">Не удалось сохранить изображение на SD карту</string>
    <string name="page_title_preview">Просмотр</string>
    <string name="country_caption">Страна</string>
    <string name="city_caption">Город</string>
    <string name="please_wait">Пожалуйста подождите…</string>
    <string name="graphics">Графика</string>
    <string name="send_button">Отправить</string>
    <string name="input_email_caption">Ваш email:</string>
    <string name="email_body">Сообщение:</string>
    <string name="input_username_caption">Ваше имя:</string>
    <string name="input_text_please">Введите текст сообщения</string>
    <string name="clear_button">Очистить форму</string>
    <string name="validation_cannot_be_empty">Необходимо заполнить</string>
    <string name="validation_email">Электронный адрес не распознан</string>
    <string name="username_property">USERNAME_PROPERTY</string>
    <string name="useremail_property">USEREMAIL_PROPERTY</string>
    <string name="feedback_message_successfuly_sent">Сообщение успешно отправлено</string>
    <string name="feedback_message_sending_error">Ошибка при отправке сообщения</string>
    <string name="page_title_rough_draft">Черновики</string>
    <string name="page_title_proccess_orders">В обработке</string>
    <string name="page_title_orders_history">Отправленные</string>
    <string name="creating_category_name">На валидации</string>
    <string name="paying_category_name">Не оплачены</string>
    <string name="email_sending_category_name">Не отправлены на сервер</string>
    <string name="printing_and_snailmailing_category_name">Ожидают печати</string>
    <string name="executed_category_name">Отправлены по почте</string>
    <string name="transaction_id">Номер оплаты</string>
    <string name="pay_date">Дата оплаты</string>
    <string name="price">Стоимость</string>
    <string name="payment_details">Детали платежа</string>
    <string name="message_category">Сообщение</string>
    <string name="delivery_address">Адресат</string>
    <string name="order_category">Детали заказа</string>
    <string name="order_number">Номер заказа</string>
    <string name="order_date">Дата заказа</string>
    <string name="order_with_number">Заказ-</string>
    <string name="text_sample">Абв</string>
    <string name="send_email">На мой email</string>
    <string name="send_mail">По почте</string>
    <string name="postcard_saved_to_draft">Открытка успешно сохранена в черновики</string>
    <string name="client_mail_subject">Открытка InstaPrint</string>
    <string name="send_poscard_to_email">Отправить открытку на email</string>
    <string name="postcard_email_successfuly_sent">открытка успешно отправлена</string>
    <string name="postcard_email_message_sending_error">Не удалось отправить открытку на email</string>
    <string name="save_draft_error">Не удалось сохранить в черновики</string>
    <string name="photo_chosen">Фотография выбрана</string>
    <string name="message_chosen">Сообщение для адресата написано</string>
    <string name="address_to_chosen">Выбран адресат</string>
    <string name="choose_address">Выбрать адресата</string>
    <string name="address_to_not_chosen">Получатель не выбран</string>
    <string name="photo_not_chosen">Фотография не выбрана</string>
    <string name="message_not_chosen">Нет сообщения</string>
    <string name="validation_dialog">Проверка заполнения</string>
    <string name="order_copied_to_draft">Заказ был успешно скопирован в черновики</string>
    <string name="client_email_body">спасибо за использование сервиса InstaPrint</string>


</resources>
