<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white_smoke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_for_width"
            android:orientation="vertical"
            >

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:padding="10dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/order_category"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal"
                style="?android:attr/listSeparatorTextViewStyle" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_number" />

            <EditText
                android:id="@+id/order_number"
                android:layout_columnSpan="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_date" />

            <EditText
                android:id="@+id/order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:ems="8" />


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/message_category"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal"
                style="?android:attr/listSeparatorTextViewStyle" />


            <EditText
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="fill" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/delivery_address"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal"
                style="?android:attr/listSeparatorTextViewStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/full_name"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/zipcode" />

            <EditText
                android:id="@+id/zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:inputType="number"
                android:ems="8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/city_caption" />


            <EditText
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:ems="8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_caption" />

            <EditText
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/payment_details"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal"
                style="?android:attr/listSeparatorTextViewStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_id" />

            <EditText
                android:id="@+id/transaction_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pay_date" />

            <EditText
                android:id="@+id/pay_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:layout_columnSpan="2"
                android:inputType="datetime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:ems="8"
                android:inputType="numberDecimal" />

        </GridLayout>

    </LinearLayout>
</ScrollView>

